--- a/fastJSON.nuspec
+++ b/fastJSON.nuspec
@@ -1,24 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata>
-    <id>fastJSON</id>
-    <version>2.3.5.3</version>
-    <title>fastJSON</title>
-    <authors>mgholam</authors>
-    <owners />
-    <projectUrl>https://www.codeproject.com/Articles/159450/fastJSON</projectUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>smallest, fastest polymorphic JSON serializer</description>
-  </metadata>
-  <files>
-    <file src="output\net35\fastjson.dll" target="lib\net20\fastJSON.dll" />
-    <file src="output\net35\fastjson.dll" target="lib\net35\fastJSON.dll" />
-    <file src="output\net40\fastjson.dll" target="lib\net40\fastJSON.dll" />
-    <file src="output\net4\fastjson.dll" target="lib\net4\fastJSON.dll" />
-    <file src="output\netstandard2.0\fastjson.dll" target="lib\netstandard2.0\fastJSON.dll" />
-    <file src="output\netstandard2.0\fastJSON.deps.json" target="lib\netstandard2.0\fastJSON.deps.json" />
-    <file src="history.txt" target="lib\history.txt" />
-    <file src="readme.md" target="lib\readme.md" />
-    <file src="Howto.md" target="lib\Howto.md" />
-  </files>
+<package
+    xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+    <metadata>
+        <id>fastJSON</id>
+        <version>2.4.0</version>
+        <title>fastJSON</title>
+        <authors>mgholam</authors>
+        <owners />
+        <projectUrl>https://www.codeproject.com/Articles/159450/fastJSON</projectUrl>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <description>smallest, fastest polymorphic JSON serializer</description>
+    </metadata>
+    <files>
+        <file src="output\net35\fastjson.dll" target="lib\net20\fastJSON.dll" />
+        <file src="output\net35\fastjson.dll" target="lib\net35\fastJSON.dll" />
+        <file src="output\net40\fastjson.dll" target="lib\net40\fastJSON.dll" />
+        <file src="output\net4\fastjson.dll" target="lib\net4\fastJSON.dll" />
+        <file src="output\netstandard2.0\fastjson.dll" target="lib\netstandard2.0\fastJSON.dll" />
+        <file src="output\netstandard2.0\fastJSON.deps.json" target="lib\netstandard2.0\fastJSON.deps.json" />
+        <file src="output\net5.0\fastjson.dll" target="lib\net5.0\fastJSON.dll" />
+        <file src="output\net5.0\fastJSON.deps.json" target="lib\net5.0\fastJSON.deps.json" />
+        <file src="output\net5.0\ref\fastJSON.dll" target="lib\net5.0\ref\fastJSON.dll" />
+        <file src="history.txt" target="lib\history.txt" />
+        <file src="readme.md" target="lib\readme.md" />
+        <file src="Howto.md" target="lib\Howto.md" />
+    </files>
 </package>
